Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Jul-2011 Andrew Eddie
 ! Form package docblocks sync'd with platform repo.
 ! HTML package docblocks/code formatting sync'd with platform repo.
  
09-Jul-2011 Christophe Demko
 # [#26349] Update TinyMCE to version 3.4.3.2 (Rouven Weßling)

09-Jul-2011 Jean-Marie Simonet
 $ Updating installation ini files: ckb-IQ, el-GR, fa-IR, it-IT, ro-RO, sr-SR, sr-YU, sv-SE.
 - Deleting some installation lang files: bg-BG, bn-BD, eo-XX, id-ID, is-IS, ml-IN, mn-MN, sq-AL, vi-VN
 # Updating generator to 1.7
 $ Updating installation ini files: ta-IN
 # Updating Credits.
 $ Updating installation ini files: es-ES

09-Jul-2011 Andrew Eddie
 ^ JPlatform class file moved to /libraries/ to sync with platform repo.
 ! Database package docblocks sync'd with platform repo. 
 ! Error package docblocks sync'd with platform repo.
 # Removed define for JPLATFORM from platform.php as it causes problems on some setups (probably due to slight variations in the spl autoloader).
 
08-Jul-2011 Andrew Eddie
 ! Application package docblocks sync'd with platform repo. 
 ! Client package docblocks sync'd with platform repo. 

08-Jul-2011 Christophe Demko
 # [#26282] user manager - last visited date (bill richardson)
 # [#26348] Sync changes from the platform - JHTML edition (Rouven Weßling)

08-Jul-2011 Jean-Marie Simonet
 $ Updating installation ini files: da-DK, de-DE, en-AU, en-US, gl-ES, gu-IN, he-IL, hr-HR, ja-JP, km-KH, lv-LV, mk-MK, nb-NO, nn-NO, ru-RU, uk-UA

07-Jul-2011 Christophe Demko
 # [#26247] Automatic update from 1.6.4 will leave some unused file (Big thanks to all testers!)
 # [#26258] the contactcreator-PlugIn interrupts the contact-categories and -names (Nikolai Plath)

07-Jul-2011 Jean-Marie Simonet
 + [#20733] Some core component do not correctly uninstall. Thanks Christophe.