@@ -29,115 +29,136 @@ class JLanguage extends JObject
 	protected static $languages = array();
 
 	/**
-	 * @var    boolean  Debug language, If true, highlights if string isn't found.
+	 * Debug language, If true, highlights if string isn't found.
+	 * @var    boolean
 	 * @since  11.1
 	 */
 	protected $debug = false;
 
 	/**
-	 * @var    string  The default language, used when a language file in the requested language does not exist.
+	 * The default language, used when a language file in the requested language does not exist.
+	 * @var    string
 	 * @since  11.1
 	 */
 	protected $default	= 'en-GB';
 
 	/**
-	 * @var    array  An array of orphaned text.
+	 * An array of orphaned text.
+	 * @var    array
 	 * @since  11.1
 	 */
 	protected $orphans = array();
 
 	/**
-	 * @var    array  Array holding the language metadata.
+	 * Array holding the language metadata.
+	 * @var    array
 	 * @since  11.1
 	 */
 	protected $metadata = null;
 
 	/**
-	 * @var    array|boolean  Array|boolean holding the language locale.
+	 * Array holding the language locale or boolean null if none.
+	 * @var    array|boolean
 	 * @since  11.1
 	 */
 	protected $locale = null;
 
 	/**
-	 * @var    string  The language to load.
+	 * The language to load.
+	 * @var    string
 	 * @since  11.1
 	 */
 	protected $lang = null;
 
 	/**
-	 * @var    array  A nested array of language files that have been loaded
+	 * A nested array of language files that have been loaded
+	 * @var    array
 	 * @since  11.1
 	 */
 	protected $paths = array();
 
 	/**
-	 * @var    array  List of language files that are in error state
+	 * List of language files that are in error state
+	 * @var    array
 	 * @since  11.1
 	 */
 	protected $errorfiles = array();
 
 	/**
-	 * @var    array  Translations
+	 * Translations
+	 * @var    array
 	 * @since  11.1
 	 */
 	protected $strings = null;
 
 	/**
-	 * @var    array  An array of used text, used during debugging.
+	 * An array of used text, used during debugging.
+	 * @var    array
 	 * @since  11.1
 	 */
 	protected $used = array();
 
 	/**
-	 * @var    integer  Counter for number of loads.
+	 * Counter for number of loads.
+	 * @var    integer
 	 * @since  11.1
 	 */
 	protected $counter = 0;
 
 	/**
-	 * @var    array  An array used to store overrides.
+	 * An array used to store overrides.
+	 * @var    array
 	 * @since  11.1
 	 */
 	protected $override = array();
 
 	/**
-	 * @var    string  Name of the transliterator function for this language.
+	 * Name of the transliterator function for this language.
+	 * @var    string
 	 * @since  11.1
 	 */
 	protected $transliterator = null;
 
 	/**
-	 * @var    string  Name of the pluralSuffixesCallback function for this language.
+	 * Name of the pluralSuffixesCallback function for this language.
+	 * @var    string
 	 * @since  11.1
 	 */
 	protected $pluralSuffixesCallback = null;
 
 	/**
-	 * @var    string  Name of the ignoredSearchWordsCallback function for this language.
+	 * Name of the ignoredSearchWordsCallback function for this language.
+	 * @var    string
 	 * @since  11.1
 	 */
 	protected $ignoredSearchWordsCallback = null;
 
 	/**
-	 * @var    string  Name of the lowerLimitSearchWordCallback function for this language.
+	 * Name of the lowerLimitSearchWordCallback function for this language.
+	 * @var    string
 	 * @since  11.1
 	 */
 	protected $lowerLimitSearchWordCallback = null;
 
 	/**
-	 * @var    string  Name of the uppperLimitSearchWordCallback function for this language
+	 * Name of the uppperLimitSearchWordCallback function for this language
+	 * @var    string
 	 * @since  11.1
 	 */
 	protected $upperLimitSearchWordCallback = null;
 
 	/**
-	 * @var    string  Name of the searchDisplayedCharactersNumberCallback function for this language.
+	 * Name of the searchDisplayedCharactersNumberCallback function for this language.
+	 * @var    string
 	 * @since  11.1
 	 */
 	protected $searchDisplayedCharactersNumberCallback = null;
 
 	/**
 	 * Constructor activating the default information of the language.
+	 *
+	 * @param   string   $lang   The language
+	 * @param   boolean  $debug  Indicates if language debugging is enabled.
 	 *
 	 * @return  JLanguage
 	 *
@@ -223,10 +244,10 @@ class JLanguage extends JObject
 	/**
 	 * Returns a language object.
 	 *
-	 * @param   string  $lang   The language to use.
-	 * @param   bool    $debug  The debug mode.
+	 * @param   string   $lang   The language to use.
+	 * @param   boolean  $debug  The debug mode.
 	 *
-	 * @return  object  JLanguage  The Language object.
+	 * @return  JLanguage  The Language object.
 	 *
 	 * @since   11.1
 	 */
@@ -242,9 +263,9 @@ class JLanguage extends JObject
 	/**
 	 * Translate function, mimics the php gettext (alias _) function.
 	 *
-	 * The function checks if $jsSafe is true then if $interpretBackslashes is true.
+	 * The function checks if $jsSafe is true, then if $interpretBackslashes is true.
 	 *
-	 * @param   string  $string                 The string to translate
+	 * @param   string  $string                The string to translate
 	 * @param   bool    $jsSafe                Make the result javascript safe
 	 * @param   bool    $interpretBackslashes  Interpret \t and \n
 	 *
@@ -286,7 +307,7 @@ class JLanguage extends JObject
 		}
 
 		if ($jsSafe) {
-			// javascript filter
+			// Javascript filter
 			$string = addslashes($string);
 		}
 		else if ($interpretBackSlashes) {
@@ -301,9 +322,9 @@ class JLanguage extends JObject
 	 * Transliterate function
 	 *
 	 * This method processes a string and replaces all accented UTF-8 characters by unaccented
-	 * ASCII-7 "equivalents"
+	 * ASCII-7 "equivalents".
 	 *
-	 * @param   string  $string The string to transliterate.
+	 * @param   string  $string  The string to transliterate.
 	 *
 	 * @return  string  The transliteration of the string.
 	 *
@@ -338,7 +359,9 @@ class JLanguage extends JObject
 	/**
 	 * Set the transliteration function.
 	 *
-	 * @return  string  Function name or the actual function for PHP 5.3.
+	 * @param   mixed  $function  Function name (string) or the actual function for PHP 5.3 (function).
+	 *
+	 * @return  mixed
 	 *
 	 * @since   11.1
 	 */
@@ -353,9 +376,9 @@ class JLanguage extends JObject
 	/**
 	 * Returns an array of suffixes for plural rules.
 	 *
-	 * @param   integer  $count  The count number.
+	 * @param   integer  $count  The count number the rule is for.
 	 *
-	 * @return  array  The array of suffixes.
+	 * @return  array    The array of suffixes.
 	 *
 	 * @since   11.1
 	 */
@@ -372,11 +395,10 @@ class JLanguage extends JObject
 	/**
 	 * Getter for pluralSuffixesCallback function.
 	 *
-	 * Use JLanguage::getPluralSuffixesCallback method instead.
-	 *
-	 * @return  string|function  Function name or the actual function for PHP 5.3
+	 * @return  mixed  Function name (string) or the actual function for PHP 5.3 (function).
 	 *
 	 * @deprecated
+	 * @note    Use JLanguage::getPluralSuffixesCallback method instead
 	 * @since   11.1
 	 */
 	public function getPluralSufficesCallback()
@@ -387,9 +409,9 @@ class JLanguage extends JObject
 	/**
 	 * Getter for pluralSuffixesCallback function.
 	 *
-	 * @return  string|function  Function name or the actual function for PHP 5.3.
-	 * @since   11.1
+	 * @return  mixed  Function name (string) or the actual function for PHP 5.3 (function).
 	 *
+	 * @since   11.1
 	 */
 	public function getPluralSuffixesCallback()
 	{
@@ -399,7 +421,9 @@ class JLanguage extends JObject
 	/**
 	 * Set the pluralSuffixes function.
 	 *
-	 * @return  string|function  Function name or the actual function for PHP 5.3.
+	 * @param   mixed  $function  Function name (string) or actual function for PHP 5.3 (function)
+	 *
+	 * @return  mixed  Function name or the actual function for PHP 5.3.
 	 *
 	 * @since   11.1
 	 */
@@ -431,7 +455,7 @@ class JLanguage extends JObject
 	/**
 	 * Getter for ignoredSearchWordsCallback function.
 	 *
-	 * @return  string|function  Function name or the actual function for PHP 5.3.
+	 * @return  mixed  Function name (string) or the actual function for PHP 5.3 (function).
 	 *
 	 * @since   11.1
 	 */
@@ -443,7 +467,10 @@ class JLanguage extends JObject
 	/**
 	 * Setter for the ignoredSearchWordsCallback function
 	 *
-	 * @return  string|function Function name or the actual function for PHP 5.3
+	 * @param   mixed  $function  Function name (string) or actual function for PHP 5.3 (function)
+	 *
+	 * @return  mixed  Function name (string) or the actual function for PHP 5.3 (function)
+	 *
 	 * @since   11.1
 	 */
 	public function setIgnoredSearchWordsCallback($function)
@@ -474,7 +501,8 @@ class JLanguage extends JObject
 	/**
 	 * Getter for lowerLimitSearchWordCallback function
 	 *
-	 * @return  string|function  Function name or the actual function for PHP 5.3.
+	 * @return  mixed  Function name (string) or the actual function for PHP 5.3 (function).
+	 *
 	 * @since   11.1
 	 */
 	public function getLowerLimitSearchWordCallback()
@@ -485,7 +513,10 @@ class JLanguage extends JObject
 	/**
 	 * Setter for the lowerLimitSearchWordCallback function.
 	 *
+	 * @param   mixed  $function  Function name (string) or actual function for PHP 5.3 (function)
+	 *
 	 * @return  string|function Function name or the actual function for PHP 5.3.
+	 *
 	 * @since   11.1
 	 */
 	public function setLowerLimitSearchWordCallback($function)
@@ -528,7 +559,7 @@ class JLanguage extends JObject
 	/**
 	 * Setter for the upperLimitSearchWordCallback function
 	 *
-	 * @return  string|function  Function name or the actual function for PHP 5.3.
+	 * @return  mixed  Function name (string) or the actual function for PHP 5.3 (function).
 	 *
 	 * @since   11.1
 	 */
@@ -541,9 +572,9 @@ class JLanguage extends JObject
 	}
 
 	/**
-	 * Returns the number of characters displayed during research
+	 * Returns the number of characters displayed in search results.
 	 *
-	 * @return  integer  The number of characters displayed during research (200 if no value was set for a specific language).
+	 * @return  integer  The number of characters displayed (200 if no value was set for a specific language).
 	 *
 	 * @since   11.1
 	 */
@@ -560,7 +591,7 @@ class JLanguage extends JObject
 	/**
 	 * Getter for searchDisplayedCharactersNumberCallback function
 	 *
-	 * @return  string|function  Function name or the actual function for PHP 5.3.
+	 * @return  mixed  Function name or the actual function for PHP 5.3.
 	 *
 	 * @since   11.1
 	 */
@@ -572,7 +603,7 @@ class JLanguage extends JObject
 	/**
 	 * Setter for the searchDisplayedCharactersNumberCallback function.
 	 *
-	 * @return  string|function  Function name or the actual function for PHP 5.3.
+	 * @return  mixed  Function name (string) or the actual function for PHP 5.3 (function).
 	 *
 	 * @since   11.1
 	 */
@@ -589,12 +620,12 @@ class JLanguage extends JObject
 	 *
 	 * This is a simple, quick check for the directory that should contain language files for the given user.
 	 *
-	 * @param	string  $lang      Language to check.
-	 * @param	string  $basePath  Optional path to check.
+	 * @param   string  $lang      Language to check.
+	 * @param   string  $basePath  Optional path to check.
 	 *
-	 * @return	boolean  True if the language exists.
+	 * @return  boolean  True if the language exists.
 	 *
-	 * @since	11.1
+	 * @since   11.1
 	 */
 	public static function exists($lang, $basePath = JPATH_BASE)
 	{
@@ -623,15 +654,15 @@ class JLanguage extends JObject
 	/**
 	 * Loads a single language file and appends the results to the existing strings
 	 *
-	 * @param	string  $extension  The extension for which a language file should be loaded.
-	 * @param	string  $basePath   The basepath to use.
-	 * @param	string  $lang       The language to load, default null for the current language.
-	 * @param	bool    $reload     Flag that will force a language to be reloaded if set to true.
-	 * @param	bool    $default    Flag that force the default language to be loaded if the current does not exist.
+	 * @param   string   $extension  The extension for which a language file should be loaded.
+	 * @param   string   $basePath   The basepath to use.
+	 * @param   string   $lang       The language to load, default null for the current language.
+	 * @param   boolean  $reload     Flag that will force a language to be reloaded if set to true.
+	 * @param   boolean  $default    Flag that force the default language to be loaded if the current does not exist.
 	 *
-	 * @return	boolean  True, if the file has successfully loaded.
+	 * @return  boolean  True if the file has successfully loaded.
 	 *
-	 * @since	11.1
+	 * @since   11.1
 	 */
 	public function load($extension = 'joomla', $basePath = JPATH_BASE, $lang = null, $reload = false, $default = true)
 	{
@@ -680,13 +711,14 @@ class JLanguage extends JObject
 	 *
 	 * This method will not note the successful loading of a file - use load() instead.
 	 *
-	 * @param	string  $filename   The name of the file.
-	 * @param	string  $extension  The name of the extension.
-	 * @param   bool    $overwrite  Not used??
+	 * @param   string   $filename   The name of the file.
+	 * @param   string   $extension  The name of the extension.
+	 * @param   boolean  $overwrite  Not used??
 	 *
-	 * @return	boolean True if new strings have been added to the language
-	 * @see		JLanguage::load()
-	 * @since	11.1
+	 * @return  boolean  True if new strings have been added to the language
+	 *
+	 * @see     JLanguage::load()
+	 * @since   11.1
 	 */
 	protected function loadLanguage($filename, $extension = 'unknown', $overwrite = true)
 	{
@@ -811,12 +843,12 @@ class JLanguage extends JObject
 	/**
 	 * Get a metadata language property.
 	 *
-	 * @param	string  $property  The name of the property.
-	 * @param	mixed   $default   The default value.
+	 * @param   string  $property  The name of the property.
+	 * @param   mixed   $default   The default value.
 	 *
-	 * @return	mixed The value of the property.
+	 * @return  mixed  The value of the property.
 	 *
-	 * @since	11.1
+	 * @since   11.1
 	 */
 	public function get($property, $default = null)
 	{
@@ -883,11 +915,11 @@ class JLanguage extends JObject
 	/**
 	 * Get a list of language files that have been loaded.
 	 *
-	 * @param	string  $extension  An option extension name.
+	 * @param   string  $extension  An optional extension name.
 	 *
-	 * @return	array
+	 * @return  array
 	 *
-	 * @since	11.1
+	 * @since   11.1
 	 */
 	public function getPaths($extension = null)
 	{
@@ -1057,11 +1089,11 @@ class JLanguage extends JObject
 	/**
 	 * Returns a list of known languages for an area
 	 *
-	 * @param	string  $basePath  The basepath to use
+	 * @param   string  $basePath  The basepath to use
 	 *
-	 * @return	array  key/value pair with the language file and real name.
+	 * @return  array  key/value pair with the language file and real name.
 	 *
-	 * @since	11.1
+	 * @since   11.1
 	 */
 	public static function getKnownLanguages($basePath = JPATH_BASE)
 	{
@@ -1150,13 +1182,12 @@ class JLanguage extends JObject
 	/**
 	 * Searches for language directories within a certain base dir.
 	 *
-	 * Deprecated: use parseLanguageFiles instead.
-	 *
 	 * @param   string  $dir  Directory of files.
 	 *
 	 * @return  array  Array holding the found languages as filename => real name pairs.
 	 *
 	 * @deprecated
+	 * @note    Use parseLanguageFiles instead.
 	 * @since   11.1
 	 */
 	public static function _parseLanguageFiles($dir = null)
@@ -1193,12 +1224,11 @@ class JLanguage extends JObject
 	/**
 	 * Parses XML files for language information.
 	 *
-	 * Deprecated: use parseXMLLanguageFiles instead.
-	 *
 	 * @param   string  $dir  Directory of files.
 	 *
 	 * @return  array  Array holding the found languages as filename => metadata array.
 	 *
+	 * @note    Use parseXMLLanguag instead.
 	 * @deprecated
 	 * @since   11.1
 	 */
@@ -1242,13 +1272,12 @@ class JLanguage extends JObject
 	/**
 	 * Parse XML file for language information.
 	 *
-	 * Deprecated: use parseXMLLanguageFile instead.
-	 *
 	 * @param   string  $path  Path to the XML files.
 	 *
 	 * @return  array  Array holding the found metadata as a key => value pair.
 	 *
 	 * @deprecated
+	 * @note    Use parseXMLLanguageFile instead.
 	 * @since   11.1
 	 */
 	public static function _parseXMLLanguageFile($path)
